# newstown

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOY.md  Dockerfile  MANUAL_TESTING.md  PHASE3_NOTES.md  PHASE3_QUICKSTART.md  QA_CHECKLIST.md  QUICKSTART.md  README.md  SETUP_NOTES.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_api.py  run_tests.sh  setup.py  supervisord.conf  test_phase3.py
agents/: __init__.py  base.py  editor.py  llm.py  publisher.py  reporter.py  scout.py
api/: app.py  auth.py  auth_routes.py  dashboard.py  governance.py  publishing.py
chief/: __init__.py  orchestrator.py
config/: __init__.py  logging.py  settings.py
db/: __init__.py  articles.py  connection.py  events.py  governance.py  human_oversight.py  memory.py  migrate.py  publications.py  schema.sql  tasks.py  users.py
docs/: RESEARCH_PIPELINE.md  TESTING.md
governance/: __init__.py  default_rules.py
ingestion/: __init__.py  bluesky_monitor.py  embeddings.py  entities.py  search.py  search_fallback.py  spacy_helper.py
publishing/: __init__.py  bluesky.py  email.py  rss.py  scheduler.py
scripts/: add_human_input.py  download_models.py  test_editor_flow.py  verify_e2e_editor.py
templates/: dashboard.html  dashboard_v2.html  login.html
tests/: conftest.py  test_analytics.py  test_articles.py  test_auth.py  test_bluesky.py  test_chief.py  test_core.py  test_dashboard_api.py  test_database.py  test_editor.py  test_editor_advanced.py  test_human_oversight.py  test_integration.py  test_jsonb_serialization.py  test_phase2_integration.py  (+5 more)
(+3 files in other folders)
