[project]
name = "newstown"
version = "0.1.0"
description = "Agentic newsroom OS"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "tiktoken>=0.6.0",
    "pgvector>=0.2.5",
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.27",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "aiohttp>=3.9.3",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
